--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -60,3 +60,13 @@
     overflow: hidden;
     text-overflow: ellipsis
 }
+
+footer {
+    width: 100%;
+    height: 80px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-top: 15px;
+    background: #fefefe;
+}
