--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <title>LAN Search</title>
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="/static/bower_components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet">
+    <link href="//cdn.datatables.net/1.10.4/css/jquery.dataTables.min.css" rel="stylesheet">
     <link href="/static/css/app.css" rel="stylesheet">
 </head>
 <body class='container'>
@@ -37,6 +38,7 @@
 <script src="/static/bower_components/spin.js/spin.js" type="text/javascript"></script>
 <script src="/static/bower_components/angular-spinner/angular-spinner.js" type="text/javascript"></script>
 <script src="/static/bower_components/bootstrap/dist/js/bootstrap.js" type="text/javascript"></script>
+<script src="//cdn.datatables.net/1.10.4/js/jquery.dataTables.min.js" type="text/javascript"></script>
 <script src="/static/bower_components/zeroclipboard/dist/ZeroClipboard.js" type="text/javascript"></script>
 <script src="/static/javascript/app.js" type="text/javascript"></script>
 
