--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -61,12 +61,28 @@
     text-overflow: ellipsis
 }
 
-footer {
+.ng-scope {
+    height: 100%;
+}
+
+body {
+    height: 100%;
+    background-color: #fafafa;
+}
+
+.wrapper {
+    min-height: 100%;
+    height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+    height: 100%;
+    margin: 0 auto -80px; /* the bottom margin is the negative value of the footer's height */
+}
+
+.footer, .push {
+    height: 80px; /* .push must be the same height as .footer */
+}
+
+.footer {
     width: 100%;
-    height: 80px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding-top: 15px;
-    background: #fefefe;
+    padding-top: 20px;
+    background-color: #f5f5f5;
 }
