--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1 class="name">
+    <a href="/">LAN Search</a>
+</h1>
 <div ng-controller="searchCtrl">
     <form>
         <div class="row">
