--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,11 +13,6 @@
 </head>
 <body>
 <div class="wrapper container">
-    <header id="header">
-        <h1 class="name">
-            <a href="/">LAN Search</a>
-        </h1>
-    </header>
     {% block content %}
     {% endblock %}
     <span us-spinner spinner-key="spinner-1"></span>
@@ -26,11 +21,12 @@
 
 <div class="footer">
     <div class="col-lg-12 col-sm-12 col-12 row" id="copy">
-        <span class="col-md-7"></span>
-        <span class="col-md-1">
-            <a href="/admin">Admin</a>
+        <span class="col-md-6"></span>
+        <span class="col-md-4">
+            <a href="/about">About</a> &nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/admin">Admin</a> &nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="//github.com/yadongwen/lansearch">GitHub</a>
         </span>
-        <span class="col-md-2">© 2014 Ralph Wen</span>
     </div>
 </div>
 
