--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,26 +1,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <form>
-        <div class="row" style="padding-top: 80px;padding-bottom: 800px;">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8">
-                <div class="input-group" ng-controller="indexSearchCtrl">
-                    <div class="input-group-btn">
-                        <button type="button" class="search-type btn btn-default"
-                                id="match" ng-click="indexSearch()">Match
-                        </button>
-                        <button type="button" class="search-type btn btn-default"
-                                id="wildcard" ng-click="indexSearch()">Wildcard
-                        </button>
-                        <button type="button" class="search-type btn btn-default"
-                                id="regexp" ng-click="indexSearch()">Regexp
-                        </button>
-                    </div>
-                    <input type="text" class="form-control" id="search-box" name="q"
-                           placeholder="Search" value="{{ query_text }}" ng-keydown="indexSearch()">
+<h1 class="name" style="padding-top: 160px; font-size: 70px">
+    <a href="/">LAN Search</a>
+</h1>
+<form>
+    <div class="row" style="padding-top: 80px;padding-bottom: 800px;">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-8">
+            <div class="input-group" ng-controller="indexSearchCtrl">
+                <div class="input-group-btn">
+                    <button type="button" class="search-type btn btn-default"
+                            id="match" ng-click="indexSearch()">Match
+                    </button>
+                    <button type="button" class="search-type btn btn-default"
+                            id="wildcard" ng-click="indexSearch()">Wildcard
+                    </button>
+                    <button type="button" class="search-type btn btn-default"
+                            id="regexp" ng-click="indexSearch()">Regexp
+                    </button>
                 </div>
+                <input type="text" class="form-control" id="search-box" name="q"
+                       placeholder="Search" value="{{ query_text }}" ng-keydown="indexSearch()">
             </div>
         </div>
-    </form>
+    </div>
+</form>
 {% endblock %}
