--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,8 +23,14 @@
     <div class="col-lg-12 col-sm-12 col-12 row" id="copy">
         <span class="col-md-6"></span>
         <span class="col-md-4">
-            <a href="/about">About</a> &nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/admin">Admin</a> &nbsp;&nbsp;&nbsp;&nbsp;&bull;&nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/about">About</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="bull">&bull;</span>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a href="/admin">Admin</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="bull">&bull;</span>
+            &nbsp;&nbsp;&nbsp;&nbsp;
             <a href="//github.com/yadongwen/lansearch">GitHub</a>
         </span>
     </div>
