use static page for about

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <a href="/">LAN Search</a>
 </h1>
 <form>
-    <div class="row" style="padding-top: 80px;padding-bottom: 800px;">
+    <div class="row" style="padding-top: 6%;padding-bottom: 200px;">
         <div class="col-lg-2"></div>
         <div class="col-lg-8">
             <div class="input-group" ng-controller="indexSearchCtrl">
