--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
     <div class="col-lg-12 col-sm-12 col-12 row" id="copy">
         <span class="col-md-6"></span>
         <span class="col-md-4">
-            <a href="/about">About</a>
+            <a href="/static/docs/about.html">About</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <span class="bull">&bull;</span>
             &nbsp;&nbsp;&nbsp;&nbsp;
