align footer content to center

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,18 +16,14 @@
     {% block content %}
     {% endblock %}
     <span us-spinner spinner-key="spinner-1"></span>
+
     <div class="push"></div>
 </div>
 
 <div class="footer">
-    <div class="col-lg-12 col-sm-12 col-12 row" id="copy">
-        <span class="col-md-6"></span>
-        <span class="col-md-4">
+    <div class="col-lg-12 col-sm-12 col-12 row">
+        <span class="footer-row">
             <a href="/static/docs/about.html">About</a>
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <span class="bull">&bull;</span>
-            &nbsp;&nbsp;&nbsp;&nbsp;
-            <a href="/admin">Admin</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <span class="bull">&bull;</span>
             &nbsp;&nbsp;&nbsp;&nbsp;
