--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -15,8 +15,7 @@
     text-shadow: 4px 3px 0px rgba(0, 0, 0, 0.15);
 }
 
-a:hover, a:visited, a:link, a:active
-{
+a:hover, a:visited, a:link, a:active {
     text-decoration: none;
 }
 
@@ -88,9 +87,9 @@ body {
 }
 
 .footer {
-    width: 100%;
     padding-top: 20px;
     background-color: #f5f5f5;
+    text-align: center;
 }
 
 .bull {
