use grip for md conversion

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,7 +23,7 @@
 <div class="footer">
     <div class="col-lg-12 col-sm-12 col-12 row">
         <span class="footer-row">
-            <a href="/static/docs/about.html">About</a>
+            <a href="/about">About</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
             <span class="bull">&bull;</span>
             &nbsp;&nbsp;&nbsp;&nbsp;
